Invisible font bug fix attempt.

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   margin: 0;
   transition: filter 0.05s, color 0.05s, border 0.10s, background-color 0.10s;
   //font-family: Gotham, Arial, Helvetica, sans-serif;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Gotham, GothamMedium, GothamBook, Arial, Helvetica, sans-serif;
   color: white;
   user-select: none;
   animation: popup 0.15s linear forwards;
@@ -49,7 +49,17 @@ html, body {
 
 @font-face {
   font-family: Gotham;
+  src: url("./assets/fonts/GothamMedium_1.ttf");
+}
+
+@font-face {
+  font-family: GothamMedium;
   src: url("./assets/fonts/GothamMedium.ttf");
+}
+
+@font-face {
+  font-family: GothamBook;
+  src: url("./assets/fonts/GothamBook.ttf");
 }
 
 @font-face {
